--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello! I'm Gagan K, a third-year Computer Science and Engineering student. I have a passion for Artificial Intelligence and Machine Learning, and I love participating in hackathons.</p>
+        <p>Hello! I'm Dhruva K, a third-year Computer Science and Engineering student. I have a passion for Artificial Intelligence and Machine Learning, and I love participating in hackathons.</p>
     </section>
     <section id="experience">
         <h2>Experience</h2>
