--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Gagan K</h1>
+        <h1>Dhruva K</h1>
         <p>BE 3rd Year, CSE</p>
     </header>
     <section id="about">
@@ -28,7 +28,7 @@
         </ul>
     </section>
     <footer>
-        <p>© 2024 Gagan K</p>
+        <p>© 2024 Dhruva K</p>
     </footer>
 </body>
 </html>
